# joric

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  audio.py  config.py  input.txt  llm.py  main.py  prompts.py  pyproject.toml  run_tts.py  split_audio.py  stt.py  test_chat.py  train_voice.py  tts.py
