[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "joric"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0",
    "openai>=1.30",
    "anthropic>=0.25",
    "httpx>=0.27",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
train = [
    "torch",
    "pyyaml",
]
